fix: 🐛 Alignments look different in the editor & padding on small screens.  Fixes #110 and Fixes #66

--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -1,39 +1,87 @@
 //
 // Layout
 //===============================
+
+// Set so the these elements fill
+// the vertical space in the window
 html, body {
   height: 100%
 }
-.site-content {
-  flex: 1 0 auto;
-}
-footer {
-  flex-shrink: 0;}
 
-// ## Base Wrap
+//
+// This wraps all of the content for a page
+//
 .wp-site-blocks {
 	height: 100%;
 	display: flex;
-	flex-direction: column
+	flex-direction: column;
 }
 
-// ### Wide and Full Widths
-@media screen and (min-width: 782px) {
+//
+// <main> element: the main content region
+//
+// We set flex-grow to true so the footer
+// is always pushed to the bottom of the window
+//
+.content-region {
+  flex: 1 0 auto;
+}
 
-	.wp-block-post-content > .alignwide,
-	.block-editor-block-list__layout.is-root-container > .wp-block[data-align=wide] {
-		width: calc(45 * var(--wp--custom--spacing--baseline));
-		max-width: calc(45 * var(--wp--custom--spacing--baseline));
-		margin-right: auto;
-		margin-left: calc(50% - calc(22.5 * var(--wp--custom--spacing--baseline)))
+
+//
+// Utility class
+// This sets a padding on layout elements
+// when the window width < 74rem
+//
+.ucsc-layout-row {
+	max-width: 72rem;
+	margin: 0 auto;
+	padding: 0 1rem;
+}
+
+//
+// Fixed width content window
+// These rules set a fixed width of 72rem
+// in the editor and live page window
+// while still allowing full-width elements
+// with the .alignfull class
+//
+.is-root-container {
+	max-width: 72rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.is-root-container,
+.content-region {
+    padding-left: var(--wp--custom--spacing--baseline);
+    padding-right: var(--wp--custom--spacing--baseline);
+}
+
+ .wp-block-post-content > .alignfull,
+ .block-editor-block-list__layout.is-root-container>.alignfull {
+    margin-left: calc(-1 * var(--wp--custom--spacing--baseline)) !important;
+    margin-right: calc(-1 * var(--wp--custom--spacing--baseline)) !important;
+    width: calc( 100% + var(--wp--custom--spacing--baseline) + var(--wp--custom--spacing--baseline) ) !important;
+ }
+
+@media screen and (min-width: 74rem) {
+
+	.ucsc-layout-row {
+		padding: 0;
+	}
+
+	.is-root-container,
+	.content-region {
+    padding-left: 0;
+    padding-right: 0;
 	}
 
 	.wp-block-post-content > .alignfull,
-	.block-editor-block-list__layout.is-root-container > .wp-block[data-align=full] {
-		width: 100vw;
-		max-width: 100vw;
-		max-width: 2020px;
-		margin-left: calc(50% - 50vw);
-		margin-right: auto;
+	.block-editor-block-list__layout.is-root-container > .alignfull {
+			width: 100vw !important;
+			max-width: 100vw !important;
+			margin-left: calc(50% - 50vw) !important;
+			margin-right: auto !important;
 	}
 }
