--- a/src/scss/theme-regions/_footer.scss
+++ b/src/scss/theme-regions/_footer.scss
@@ -11,5 +11,6 @@
 
 	clear: both;
 	margin-top: 3rem;
+	flex-shrink: 0;
 
 }
